syntax = "proto3";
package movie;

message MovieItem {
  string title = 1;
  int32 year = 2;
  string genre = 3;
}

message MovieRequest {
}

message MovieResponse {
  repeated MovieItem movies = 1;
}

service Movie {
  rpc GetMovies (MovieRequest) returns (MovieResponse);
  rpc AddMovie (MovieItem) returns (MovieResponse);
}
